--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </select>
               </div>
             <div class="form-group">
-                <button class="btn" id="save-task">Add Task</button>
+                <button class="btn" id="save-task" type="submit">Add Task</button>
             </div>
         </Form>
     </header>
@@ -32,9 +32,7 @@
     <main class="page-content">
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
-            <ul class="task-list" id="tasks-to-do">
-                <li class="task-item">A task is going to be added soon!</li>
-            </ul>
+            <ul class="task-list" id="tasks-to-do"></ul>
         </section>
     </main>
 
